--- a/style.css
+++ b/style.css
@@ -12,25 +12,26 @@
   --secondary-color: #222;
   --text-color: #333;
   --background-color: #fff;
-  --font-family: "Arial", sans-serif;
+  --font-family: "Kanit", serif;
   --transition-duration: 0.3s;
   --text-white: #fff;
 }
 
-body {
+body,html {
   font-family: var(--font-family);
   color: var(--text-color);
   background-color: var(--background-color);
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Kanit", serif;
+  width: 100vw;
+  z-index: 0;
 }
 
 .site-header {
   width: 100vw;
   background-color: transparent;
-  padding: 1rem 3rem;
+  padding: 1rem 4rem;
   position: fixed;
   top: 0;
   left: 0;
@@ -45,13 +46,14 @@ body {
 .site-header.scrolled {
   background-color: rgba(0, 0, 0, 0.122);
   backdrop-filter: blur(10px);
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.308);
 }
 
 .main-nav {
   width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  display: flex;
+  justify-content: left;
+  gap: 15rem;
   align-items: center;
 }
 
@@ -66,6 +68,23 @@ body {
 .logo-icon {
   width: 60px;
   height: 60px;
+}
+
+.nav-pc {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  width: 40rem;
+}
+
+.nav-bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 4rem;
+  width: 40rem;
+  margin-left: 7rem;
 }
 
 .nav-list {
@@ -91,7 +110,9 @@ body {
   backdrop-filter: blur(10px);
   box-shadow: 0.5px 0.5px 3px black;
   padding: 1rem;
-  transition: padding var(--transition-duration);
+  transition: padding 0.4s ease, transform 0.4s ease;
+  transform: scale(1.01);
+  transform: translate(-1px, -2px);
 }
 
 .nav-actions {
@@ -131,18 +152,86 @@ body {
 }
 
 .subscribe-btn:hover {
-  background-color: var(--primary-color);
+  background-color: #ff00003f;
   color: var(--background-color);
+  backdrop-filter: blur(10px);
+  outline: 2px solid #ff00003f;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+  font-size: 1.8rem;
+  padding: 0.2rem 0.2rem;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  width: 2rem;
+  height: 2rem;
+}
+
+.drop-down {
+  position: fixed;
+  top: 5.8rem;
+  padding: 1.2rem 1.5rem;
+  right: 0;
+  width: 70vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  z-index: 7;
+  justify-content: flex-start;
+  background-color: rgba(0, 0, 0, 0.122);
+  backdrop-filter: blur(10px);
+  box-shadow: 10px 14px 10px 10px rgba(0, 0, 0, 0.712);
+  display: none;
+  padding-top: 1rem;
+  transition: all 0.5s ease-in;
+  animation: drop 0.3s ease-in forwards;
+}
+
+.drop-down .fa-x {
+  align-self: flex-end;
+  background-color: #ff000023;
+  color: var(--background-color);
+  backdrop-filter: blur(10px);
+  outline: 2px solid #ff00002a;
+  width: fit-content;
+  padding: 0.4rem;
+  font-size: 0.9rem;
+  font-weight: bold;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.drop-down a {
+  text-decoration: none;
+  color: #fff;
+  width: fit-content;
+}
+
+.drop-down a:hover {
+  transform: scale(1.01);
+  transform: translate(-1px, -2px);
+  transition: transform 0.4s ease;
+  color: #ff5b29d5;
+  font-weight: 600;
+}
+
+@keyframes drop {
+  from {
+    width: 0%;
+  }
+  to {
+    width: 60%;
+  }
 }
 
 .main {
   width: 100%;
   position: relative;
-  overflow: hidden;
-}
-
-.main.active + header {
-  background-color: #333;
+  /* overflow: hidden; */
 }
 
 .hero-section {
@@ -150,10 +239,12 @@ body {
   padding: 9rem 4rem;
   background-image: url("./Assets/hero-bg.png");
   background-size: cover;
+  background-repeat: no-repeat;
   background-position: center;
   height: 120vh;
   color: var(--background-color);
   position: relative;
+  width: 100%;
 }
 
 .hero-section::before {
@@ -291,9 +382,9 @@ body {
 }
 
 .now-playing .player {
-  display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   padding: 2rem;
@@ -536,25 +627,24 @@ body {
   width: 100%;
 }
 
-.trending-img1 .play-btn{
-    width: 4rem;
-    height: 4rem;
-    background-color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 50%;
+.trending-img1 .play-btn {
+  width: 4rem;
+  height: 4rem;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
 }
 
-.trending-img1 .play-btn img{
-    width: 100%;
+.trending-img1 .play-btn img {
+  width: 100%;
 }
 
-.trending-img1 .play-btn:hover{
-    filter: invert(0.9);
-    cursor: pointer;
+.trending-img1 .play-btn:hover {
+  filter: invert(0.9);
+  cursor: pointer;
 }
-
 
 .popular-trending-right {
   width: 100%;
@@ -602,6 +692,11 @@ body {
   gap: 1.2rem;
 }
 
+.popular-bottom-left{
+  display: flex;
+  gap: 2rem;
+}
+
 .popular-bottom-details h3 {
   font-weight: 500;
   color: #000;
@@ -626,8 +721,8 @@ body {
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.452);
 }
 
-.popular-bottom i:hover{
-    filter: invert(0.6);
+.popular-bottom i:hover {
+  filter: invert(0.6);
 }
 
 .popular-bottom button:hover {
@@ -871,15 +966,15 @@ body {
 }
 
 .testimonials-slider {
-  display: flex;
+  display: grid;
   gap: 2rem;
   padding: 0 2rem;
-  align-items: center;
-  justify-content: center;
+  grid-template-columns: repeat(3,1fr);
 }
 
 .testimonial-card {
   display: flex;
+  width: 100%;
   gap: 1rem;
   border-radius: 1rem;
   flex-direction: column;
@@ -1152,7 +1247,7 @@ footer {
   border: none;
   height: 1px;
   background-color: #666;
-  margin-bottom: 4rem ;
+  margin-bottom: 4rem;
 }
 
 .footer-columns {
@@ -1170,22 +1265,22 @@ footer {
   align-items: center;
 }
 
-.footer-column:nth-of-type(1){
-    display: flex;
-    flex-direction: column;
-    flex-basis: 45%;
-    min-width: 30rem;
-    align-items: flex-start;
+.footer-column:nth-of-type(1) {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 45%;
+  min-width: 30rem;
+  align-items: flex-start;
 }
 
-.footer-column:nth-of-type(1) h3{
-    font-weight: 600;
+.footer-column:nth-of-type(1) h3 {
+  font-weight: 600;
 }
 
 .footer-column h3 {
   font-size: 1.8rem;
   margin-bottom: 10px;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   font-weight: 400;
 }
 
@@ -1194,7 +1289,7 @@ footer {
   font-size: 1.2rem;
   line-height: 1.6;
   margin: 0;
-  padding: .3rem 0;
+  padding: 0.3rem 0;
   list-style: none;
 }
 
@@ -1234,4 +1329,388 @@ footer {
   text-align: center;
   font-size: 1rem;
   margin-top: 20px;
+}
+
+/* MEDIA QUERIES */
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 479px
+*/
+@media (min-width: 320px) and (max-width: 480px) {
+
+  body,html{
+    overflow-x: hidden;
+  }
+
+  .site-header {
+    padding: 1rem;
+  }
+
+  .main-nav {
+    gap: 5rem;
+  }
+
+  .nav-pc {
+    display: none;
+  }
+
+  .drop-down{
+    top: 4rem;
+    min-width: fit-content;
+  }
+
+  .hamburger {
+    display: flex;
+    margin-left: -2rem;
+  }
+
+  .logo {
+    font-size: 1rem;
+  }
+
+  .logo-icon {
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .hero-section {
+    padding: 8rem 1rem;
+  }
+
+  .hero-header h1 {
+    font-size: 2.5rem;
+    line-height: 1.1;
+    letter-spacing: 0.05rem;
+  }
+
+  .hero-header p {
+    font-size: 0.7rem;
+    margin-bottom: 2rem;
+    letter-spacing: 0.1rem;
+  }
+
+  .start-listening {
+    padding: 0.4rem 1rem;
+    width: 90%;
+    max-width: 20rem;
+    gap: 1rem;
+  }
+
+  .start-listening span {
+    font-size: 0.66rem;
+    letter-spacing: 0.1rem;
+    width: max-content;
+  }
+
+  .visualiser img {
+    width: 4.5rem;
+    height: 2rem;
+  }
+
+  .hero-footer .listener-avatar {
+    width: 40px;
+    height: 40px;
+  }
+
+  .now-playing {
+    height: fit-content;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    bottom: -17rem;
+    left: 0.8rem;
+  }
+
+  .now-playing .player {
+    flex-direction: column;
+    background-color: gainsboro;
+    padding: 1.5rem 0.5rem;
+    width: 100%;
+  }
+
+  .now-playing .player .now-playing-left {
+    gap: 0rem;
+    width: 90%;
+    justify-content: space-between;
+  }
+
+  .now-playing .player .now-playing-left .main-play {
+    flex-direction: column;
+    align-items: start;
+  }
+
+  .now-playing .player .episode-thumbnail {
+    margin-right: 0.1rem;
+    width: 11rem;
+    height: 100%;
+    margin-bottom: 1rem;
+  }
+
+  .now-playing .player .player-details .episode-title {
+    font-size: 0.8rem;
+    margin-bottom: 0.2rem;
+    margin-top: -1rem;
+  }
+
+  .now-playing .player .player-details p {
+    font-size: 0.7rem;
+  }
+
+  .now-playing .player .player-details .episode-info {
+    font-size: 1rem;
+    color: var(--text-color);
+    margin-bottom: 1rem;
+  }
+
+  .controls-top {
+    flex-direction: column;
+  }
+
+  .volume {
+    width: 70%;
+  }
+
+  .vol-meter {
+    height: 3px;
+  }
+
+  .popular-trending {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 1rem;
+    padding-top: 18rem;
+    width: 100%;
+  }
+
+  .popular-trending h2{
+    font-size: 1.8rem;
+  }
+
+  .trending-images {
+  display: flex;
+  align-items: flex-end;
+  width: 98%;
+  height: 100%;
+}
+
+.trending-img1 {
+  width: 13rem;
+  height: 22rem;
+}
+
+.trending-img2 {
+  width: 10rem;
+  height: 15rem;
+  margin-left: -4rem;
+}
+
+.popular-trending-right{
+  max-width: 90vw;
+}
+
+.popular-trending-right .see-all {
+  font-size: .9rem;
+}
+
+
+.popular-trending-right .pop-h3 {
+  font-size: 1.1rem;
+  margin: 1rem 0;
+}
+
+.popular-trending-right .pop-title {
+  font-size: 1.2rem;
+  margin: 0rem ;
+}
+
+.popular-trending-right p {
+  font-size: .8rem;
+}
+
+.popular-bottom {
+  flex-direction: column;
+  align-items: start;
+}
+
+.explore-podcasts{
+  padding: 1rem;
+}
+
+.explore-header{
+  flex-direction: column;
+}
+
+.explore-podcasts h2{
+  font-size: 1.5rem;
+  text-align: left;
+}
+
+.explore-podcasts .podcast-categories {
+  display: none;
+}
+
+.podcast-list{
+  grid-template-columns: repeat(1,1fr);
+  gap: 2rem;
+  justify-content: center;
+}
+
+.podcast-card{
+  width: 80%;
+}
+
+.offers p {
+  font-size: .9rem;
+}
+
+.offers h2 {
+  font-size: 1.5rem;
+}
+
+.main-offers{
+  grid-template-columns: repeat(1,1fr);
+}
+
+.testimonials{
+  height: fit-content;
+}
+
+.testimonials h2 {
+  text-align: center;
+  margin: 1rem 0;
+  font-size: 1.4rem;
+  color: white;
+  font-weight: 600;
+}
+
+.testimonials h2:nth-of-type(1) {
+  font-weight: 300;
+  font-size: 1.1rem;
+}
+
+.testimonials-slider{
+  padding: 0;
+  grid-template-columns: repeat(1,1fr);
+}
+
+.pricing-section{
+  padding: 1rem ;
+}
+
+.pricing-section h2 {
+  margin: 1rem 0;
+  font-size: 1.4rem;
+}
+
+.pricing-section p{
+  font-size: .95rem;
+}
+
+.pricing-cards{
+  grid-template-columns: repeat(1,1fr);
+}
+
+.newsletter{
+margin:3rem 1rem;
+grid-template-columns: repeat(1,1fr);
+align-items: center;
+padding: 2rem 1rem 0rem 1rem;
+
+}
+
+.newsletter-right {
+  width: 100%;
+  height: 20rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  margin-left: -1rem;
+}
+
+.newsletter .newsletter-form {
+  flex-direction: column;
+  margin-top: 4rem;
+  gap: 2rem;
+}
+
+footer {
+  padding: 1rem;
+}
+
+.footer-top {
+  flex-direction: column;
+  padding: 2rem 0;
+  gap: 1rem;
+}
+
+.footer-top h2 {
+  font-size: 1.8rem;
+  letter-spacing: 0.05rem;
+  line-height: 1.5;
+  font-weight: 600;
+}
+
+.download-button{
+  font-size: 1.2rem;
+}
+
+
+.footer-column:nth-of-type(1) {
+  display: flex;
+  flex-direction: column;
+  flex-basis: 45%;
+  min-width: 90%;
+  align-items: flex-start;
+}
+
+.footer-column:nth-of-type(1) h3 {
+  font-size: 1.4rem;
+}
+
+.footer-column h3 {
+  font-size: 1.3rem;
+}
+
+.footer-column p,
+.footer-column ul {
+  font-size: .9rem;
+  line-height: 1.4;
+}
+
+.footer-bottom{
+  font-size: .8rem;
+}
+
+}
+
+/* 
+  ##Device = Low Resolution Tablets, Mobiles (Landscape)
+ ##Screen = B/w 481px to 767px
+*/
+@media (min-width: 481px) and (max-width: 767px) {
+}
+
+/* 
+  ##Device = Tablets, Ipads (landscape)  ##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
+}
+
+/* 
+  ##Device = Tablets, Ipads (portrait)  ##Screen = B/w 768px to 1024px
+*/
+@media (min-width: 768px) and (max-width: 1024px) {
+}
+
+/* 
+  ##Device = Laptops, Desktops  ##Screen = B/w 1025px to 1280px
+*/
+@media (min-width: 1025px) and (max-width: 1280px) {
+}
+
+/* 
+  ##Device = Desktops  ##Screen = 1281px to higher resolution desktops
+*/
+@media (min-width: 1281px) {
 }
